# penny

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
penny/: CLAUDE.md  entrypoint.sh  pyproject.toml
penny/penny/: config.py  config_params.py  constants.py  conversation_machine.py  datetime_utils.py  penny.py  preflight.py  prompts.py  responses.py  skill_extraction.py  startup.py  text_validity.py
penny/penny/agents/: base.py  chat.py  collector.py  models.py  self_state.py
penny/penny/channels/: README.md  __init__.py  base.py  manager.py
penny/penny/channels/browser/: channel.py  models.py
penny/penny/channels/discord/: channel.py
penny/penny/channels/ios/: __init__.py  apns.py  channel.py  (+2 more)
penny/penny/commands/: __init__.py  config.py  email.py  profile.py  schedule.py  zoho.py
penny/penny/database/: __init__.py  database.py  device_store.py  ios_notification_store.py  ios_store.py  media_store.py  memory_store.py  message_store.py  models.py  mutation_store.py  send_queue_store.py  skill_store.py  skills.py
penny/penny/llm/: client.py  models.py
penny/penny/scheduler/: base.py  schedule_runner.py  schedules.py  send_queue_drainer.py
penny/penny/tests/: conftest.py  test_config.py  test_conversation_machine.py  test_eval_harness.py  test_llm_client.py  test_preflight.py  test_pydantic_models.py  test_skill_extraction.py  test_text_validity.py
penny/penny/tools/: base.py  browse.py  collection_instantiation.py  draft_email.py  generate_image.py  list_emails.py  list_folders.py  memory_args.py  memory_tools.py  micro_context.py  models.py  read_emails.py  search_emails.py  send_message.py  skill_args.py  skill_tools.py
penny/penny/validation/: __init__.py  conditions.py  outcomes.py  response_validators.py
(+156 files in other folders)
