[project]
name = "penny"
version = "0.1.0"
description = "A simple, local-first AI agent that communicates via Signal"
authors = [{ name = "Jared Lockhart" }]
requires-python = ">=3.14"
dependencies = [
    "websockets>=13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "discord.py>=2.6.4",
    "openai>=1.50.0",
    "dateparser>=1.2.0",
    "timezonefinder>=6.5.0",
    "geopy>=2.4.0",
    "pytz>=2024.1",
    "croniter>=5.0.0",
    "PyJWT[crypto]>=2.8.0",
    "numpy>=2.0.0",

]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff==0.15.9",
    "ty==0.0.28",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiohttp>=3.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "N815",  # camelCase field names required by Signal API
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["penny/tests"]

[tool.ty.environment]
python = "/usr/local/bin/python"

[tool.ty.rules]
unresolved-import = "ignore"
call-non-callable = "warn"
# SQLModel/SQLAlchemy column descriptors (.desc(), .asc(), .in_(), etc.) appear
# as plain Python types to ty — all unresolved-attribute errors are false positives
unresolved-attribute = "warn"
